--- a/src/main/webapp/app/music/music.component.html
+++ b/src/main/webapp/app/music/music.component.html
@@ -12,11 +12,17 @@
 </div>
 -->
 
-<div>
-    <h2>
-        <span id="users-page-heading">My audio files</span>
-        <button class="btn btn-primary float-right">
-            <fa-icon [icon]="'users'"></fa-icon> <span>Liked audio files</span>
+<div [ngSwitch]="likedAudioDisplayed">
+    <h2 *ngSwitchCase="true">
+        <span id="likedFiles-page-heading">Liked audio files</span>
+        <button class="btn btn-primary float-right" (click)="loadUserFiles()">
+            <fa-icon [icon]="'music'"></fa-icon> <span>My audio files</span>
+        </button>
+    </h2>
+    <h2 *ngSwitchCase="false">
+        <span id="myFiles-page-heading">My audio files</span>
+        <button class="btn btn-primary float-right" (click)="loadLikedFiles()">
+            <fa-icon [icon]="'music'"></fa-icon> <span>My audio files</span>
         </button>
     </h2>
     <jhi-alert-error></jhi-alert-error>
